--- a/citizentalk/requirements.txt
+++ b/citizentalk/requirements.txt
@@ -1,5 +1,8 @@
 Django==1.3
-distribute==0.6.10
+distribute==0.6.16
 django-debug-toolbar-django13==0.8.4
+httplib2==0.6.0
+oauth2==1.5.170
 pysqlite==2.6.3
 wsgiref==0.1.2
+yql==0.7
